--- a/templates/genre.html
+++ b/templates/genre.html
@@ -12,6 +12,7 @@
         <h1>Rock Hometown</h1>
         <nav>
             <ul>
+                <!-- Navigation links for different sections of the website -->
                 <li><a href="{{ url_for('index') }}" class="{% if request.endpoint == 'index' %}active{% endif %}">Home</a></li>
                 <li><a href="{{ url_for('bands') }}" class="{% if request.endpoint == 'bands' %}active{% endif %}">Bands</a></li>
                 <li><a href="{{ url_for('albums') }}" class="{% if request.endpoint == 'albums' %}active{% endif %}">Albums</a></li>
@@ -21,17 +22,20 @@
             </ul>
         </nav>
     </header>
+    
     <main>
         <section id="genre">
+            <!-- Section for displaying different music genres -->
             <h2>Genre</h2>
             <div class="genre-list">
+                <!-- Loop through each genre and create a clickable link -->
                 {% for genre in genre %}
                     <a href="{{ url_for('genre_bands', genre_id=genre['genre_id']) }}" class="genre-item">
                         <h3>{{ genre['genre_name'] }}</h3>
                     </a>
                 {% endfor %}
-            </div>
-        </section>
+            </div> <!-- End of genre-list div, contains all genre items -->
+        </section> <!-- End of genre section -->
     </main>
 </body>
 </html>
