--- a/templates/albums.html
+++ b/templates/albums.html
@@ -34,7 +34,7 @@
             
             <!-- Search Form -->
             <form method="GET" action="/albums" class="search-form">
-                <input type="text" name="search" placeholder="Search for albums..." class="search-input">
+                <input type="text" name="search" placeholder="Search for albums..." class="search-input"maxlength="50" required>
                 <button type="submit" class="search-button">Search</button>
             </form>
             
