--- a/static/styles.css
+++ b/static/styles.css
@@ -99,23 +99,39 @@ main {
 
 .genre-list {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 }
 
 .genre-item {
-    padding: 10px 15px;
-    border: 1px solid #000;
-    width: 100%;
-    text-align: center;
-    background-color: #e0e0e0;
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+    width: 150px;
+    height: 150px;
+    border: 1px solid #000; 
+    background-color: #e0e0e0; 
     transition: background-color 0.3s ease;
+    text-decoration: none;
+    color: black; 
+    font-size: 16px; 
+    font-weight: bold; 
 }
-
 .genre-item:hover {
     background-color: #d0d0d0;
+    color: black; 
 }
+
+.genre-item a {
+    text-decoration: none; 
+    color: black; 
+}
+
+.genre-item a:hover {
+    color: black; 
+}
+
 
 
 .search-form {
