--- a/templates/bands.html
+++ b/templates/bands.html
@@ -34,7 +34,7 @@
 
             <!-- Search form for searching bands -->
             <form method="GET" action="/bands" class="search-form">
-                <input type="text" name="search" placeholder="Search for bands..." class="search-input"> <!-- Search input field -->
+                <input type="text" name="search" placeholder="Search for bands..." class="search-input"maxlength="50" required> <!-- Search input field -->
                 <button type="submit" class="search-button">Search</button> <!-- Search button -->
             </form>
 
